we-want-you in correct order on small device

--- a/css/app.less
+++ b/css/app.less
@@ -18,8 +18,7 @@
 .small-layout {
     margin: 10px 0px;   
         p {
-            font-size: 1em;
-            padding: 10px 10px;
+            padding: 10px 5px;
         }
 }
 
